--- a/templates/method.html
+++ b/templates/method.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-   Peace for Ukraine
-   <hr>
-   For Justice
-   <a href="/main">메인</a>
+    <form action="/method", method="get">
+        <input type = "text" name="name"/>
+        <input type = "submit">
+    </form>
 </body>
 </html>
